# friendapp-core

./: .env.example  .gitignore  ADD_WORKFLOW.md  DEVELOPMENT.md  FASE3_SUMMARY.md  Makefile  README.md  SETUP.md  TESTING_RESULTS.md  WINDOWS_SETUP.md  WORKFLOW_SETUP.md  docker-compose.yml  package.json
backend/api-gateway/: Dockerfile  package.json
backend/go-services/: .env.example  Dockerfile  go.mod  go.sum
backend/microservices/: README.md  init-db.sql
backend/node-api/: .env.example  package.json
backend/python-ai/: .env.example  Dockerfile  main.py  pyproject.toml
backend/python-ai/app/api/: aurah_routes.py  nlp_routes.py
backend/python-ai/app/config/: database.py
backend/python-ai/app/services/: aurah_service.py
docs/: INDICE.md  SYNC_STATUS.md  arquitetura-modulos-integrados.md  fase2-implementacao.md  fase3-implementacao.md  relatorio-integracao-3-novos-modulos.md  relatorio-integracao-tecnica.md  relatorio-integracao-v3.1.md  roadmap-integracao-modulos.md  sumario-executivo.md
docs/apis/: microservices-v3.1.md
docs/resumos/: arquitetura-tecnologica-infraestrutura.md  feed-sensorial.md  ia-aurah-kosmos.md  ia-operacional.md  jogo-transmutacao.md  mapa-frequencia.md  sistema-cadastro.md  sistema-chat-vibracional.md  sistema-conexoes-autenticas.md  sistema-conexoes-reais.md  sistema-economia-friendcoins.md  sistema-eventos-experiencias.md  sistema-locais-parceiros.md  suporte-usuario.md  (+3 more)
observability/: prometheus.yml
scripts/: backup-neo4j.sh  backup-postgres.sh  check-secrets.sh  restore-neo4j.sh  restore-postgres.sh  smoke-test.sh
(+112 files in other folders)
